feat(docker): menambahkan dockerfile untuk httpserver dan gcp

--- a/Dockerfile.echoserver
+++ b/Dockerfile.echoserver
@@ -10,4 +10,5 @@ FROM debian:bookworm-slim
 RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates && \ rm -rf /var/lib/apt/lists/*
 COPY .env .
 COPY --from=builder /app/app/echo-server/echo-server /echo-server
-CMD ["/echo-server"]
+# CMD ["/echo-server"]
+ENTRYPOINT ["/echo-server"]
